# plexflixarr

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  EXCLUDE_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
assets/: dummy.mkv
data/: simkl_lists.db  state.json
docker-compose-samples/: docker-compose.kometa.yml  docker-compose.placeholdarr.yml  docker-compose.plexanisync.yml  docker-compose.plexflixarr.yml
kometa-config/: config.yml  discovery_ui.template.yml  discovery_ui.yml  main_libraries.yml  overlays.yml
notes/: full-vision.md  kometa-webhook.md
notes/allow-list-streaming-providers/: streaming-provider-user-profile.md
notes/block-list-users/: user-profile-collections.md
plans/: custom-tmdb-list-order.md  plexflixarr.plan.md  prior-art-1.md  prior-art-2.md
plans/block-list-users/: template-block-list-recipe.md  walled-garden-recipe.md
scripts/: ani-rec.sh  clear_dummies.sh
src/: arr_controller.py  config.py  dummy.py  logging_config.py  main.py
src/arr/: arr_controller.py  arr_service.py
src/clients/: anilist_client.py  anime_list_client.py  mdblist_client.py  plex_client.py  tmdb_client.py  trakt_client.py  tvdb_client.py
src/db/: simkl_lists.py
src/discover/: cleanup.py  dedupe.py  discover_controller.py  label.py
src/ingestion/: ingestion.py  seed.py  shared.py  (+2 more)
tests/: conftest.py  test_anilist_client.py  test_cleanup.py  test_dummy.py  test_ingestion.py  test_main.py  test_mdblist_client.py  test_plex_client.py  test_simkl_client.py  test_tmdb_client.py  test_trakt_client.py
(+11 files in other folders)
