[project]
name = "plexflixarr"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "plexapi>=4.15",
    "requests>=2.32",
    "pydantic-settings>=2.3",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
    "jinja2>=3.1",
    "tmdbsimple>=2.9.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
